Sun Dec 28 07:18:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:

          . Bug fix where the node name contained illegal characters.

        * install/CUTS_PICML.wxs:

          . Fixed compiliation errors.

Sat Dec 27 23:57:43 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Header_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Header_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Source_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Exec_Source_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Header_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Proxy_Header_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Proxy_Source_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Source_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CIAO/CIAO_Traits_Base.cpp:

          . Simplified the complexity of the CIAO code generator.

          . Changed outfile () to out_, which simplifies the complexity of
            the code generator.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_File_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_File_Traits.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_File_Traits.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Header_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Source_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Generator_Base.cpp: