@@ -1,3 +1,10 @@
+Sun Dec 28 08:24:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/Trigger_T.inl:
+        * cuts/Trigger_T.cpp:
+
+	  . Fixed compilation errors on non-Windows systems.
+
 Sun Dec 28 07:18:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
